Make critical alerts first-class services
